# wf-recorder-ui

./: .gitignore  Cargo.toml  README.md
assets/: wf-recorder-ui.desktop
docs/: wf-recorder-manpage.txt
src/: actions.rs  config.rs  constants.rs  discovery.rs  main.rs  models.rs  persistence.rs
src/app/: mod.rs  state.rs  view.rs
