[package]
name = "wf-recorder-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui_extras = { version = "0.27", features = ["svg", "all_loaders"] }
# image = { version = "0.25", features = ["png", "jpeg"] }
libc = "0.2"
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1"
